articles year fix on small devices

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -207,7 +207,7 @@ h1{
 
         }
         .articles-year{
-            display: inline-block;
+            display: table-cell;
             vertical-align: middle;
             line-height: 70px;
             letter-spacing: 3px;
